--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "fetch-wrapper",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Wrapper around isomorphic-fetch to retry the request if there is an error",
   "main": "index.js",
   "scripts": {
-    "test": "tape test/runner.js"
+    "test": "tape test/runner.js",
+    "compile": "babel -d lib/ src/",
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -19,6 +21,7 @@
     "babel-core": "^6.3.17",
     "babel-plugin-transform-object-rest-spread": "^6.1.18",
     "babel-preset-es2015": "^6.1.18",
+    "babel-cli": "^6.4.5",
     "nock": "^5.2.1",
     "tape": "^4.2.2"
   },
